// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeleteConfirmationModal should render correctly 1`] = `
.c0 {
  width: 600px;
  margin: auto;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  z-index: 1000;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        title-string
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{\\"bottom\\":\\"s\\"}"
      >
        <div
          data-mocked="SpaceBetween"
          direction="horizontal"
        >
          <div
            data-mocked="Button"
            data-testid="cancel-button"
          >
            Cancel
          </div>
          <div
            data-mocked="Button"
            data-testid="delete-button"
            variant="primary"
          >
            Delete
          </div>
        </div>
      </div>
    </div>
    <div
      data-mocked="SpaceBetween"
    >
      body-string
      <div
        data-mocked="Alert"
        statusiconarialabel="Warning"
        type="warning"
      >
        warning-string
      </div>
    </div>
  </div>
</div>
`;

exports[`DeleteConfirmationModal should render correctly with delete button disabled 1`] = `
.c0 {
  width: 600px;
  margin: auto;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  z-index: 1000;
}

<div>
  <div
    class="c0"
    data-mocked="Container"
  >
    <div>
      <div
        data-mocked="Header"
        variant="h2"
      >
        title-string
      </div>
    </div>
    <div>
      <div
        data-mocked="Box"
        float="right"
        padding="{\\"bottom\\":\\"s\\"}"
      >
        <div
          data-mocked="SpaceBetween"
          direction="horizontal"
        >
          <div
            data-mocked="Button"
            data-testid="cancel-button"
          >
            Cancel
          </div>
          <div
            data-mocked="Button"
            data-testid="delete-button"
            disabled=""
            variant="primary"
          >
            Delete
          </div>
        </div>
      </div>
    </div>
    <div
      data-mocked="SpaceBetween"
    >
      body-string
      <div
        data-mocked="Alert"
        statusiconarialabel="Warning"
        type="warning"
      >
        warning-string
      </div>
    </div>
  </div>
</div>
`;
